--- a/sass/style.scss
+++ b/sass/style.scss
@@ -64,6 +64,18 @@
 	font-weight: normal;
 	font-style: normal;
 }
+@font-face {
+	font-family: Brandon Regular;
+	src: url('../fonts/Brandon-Grotesque/Brandon_reg.otf');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+	font-family: Brandon Bold;
+	src: url('../fonts/Brandon-Grotesque/Brandon_bld.otf');
+	font-weight: normal;
+	font-style: normal;
+}
 
 // @import url('http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,800,800italic');
 
@@ -192,7 +204,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		font-family: "Proxima Nova Semibold", sans-serif;
+		font-family: _font(family-semibold);
 		color: _palette(fg-bold);
 		// font-weight: _font(weight-bold);
 		letter-spacing: _size(letter-spacing-alt);
@@ -924,15 +936,15 @@
 	.button {
 		@include vendor('appearance', 'none');
 		@include vendor('transition', ('background-color #{_duration(transitions)} ease-in-out', 'color #{_duration(transitions)} ease-in-out'));
-		font-family: "Proxima Nova Semibold";
+		font-family: _font(family-semibold);
 		background-color: transparent;
 		border-radius: 0px;
 		border: 0;
-		box-shadow: inset 0 0 0 2px _palette(border);
+		box-shadow: inset 0 0 0 1px _palette(border);
 		color: _palette(fg-bold);
 		cursor: pointer;
 		display: inline-block;
-		font-size: 0.85em;
+		font-size: 0.8em;
 		// font-weight: _font(weight-bold);
 		height: 3.125em;
 		letter-spacing: _size(letter-spacing-alt);
@@ -1114,10 +1126,10 @@
 			margin: 7em 2em -7em 2em;
 			@include vendor('order', '2');
 			max-width: 48em;
-			width: 45%;
+			width: 40%;
 			background: _palette(fg);
 			// background: rgba(22,23,24,0.75);
-			text-align: center;
+			// text-align: center;
 			box-shadow: 0px 3px 25px 15px rgba(0,0,0,0.05)
 			// color: _palette(fg) !important;
 
@@ -1257,12 +1269,15 @@
 			.content {
 				h2 {
 					// color: _palette($p, bg);
+					font-family: _font(family);
+
 				}
 				p {
-					font-size: 0.8875em;
+					font-size: 0.7875em;
 					// color: _palette($p, bg);
 				}
 				a {
+
 					// color: _palette($p, bg);
 				}
 			}
@@ -1387,7 +1402,7 @@
 		input[type="button"],
 		button,
 		.button {
-			box-shadow: inset 0 0 0 2px _palette($p, border-fg);
+			box-shadow: inset 0 0 0 1px _palette($p, border-fg);
 			color: _palette($p, fg-bold);
 
 			&:hover {
@@ -1522,13 +1537,13 @@
 				> a {
 					@include vendor('transition', ('color #{_duration(transitions)} ease', 'border-bottom-color #{_duration(transitions)} ease'));
 					// @include vendor('transition', 'width #{_duration(transitions)} ease');
-					font-family: "Proxima Nova Semibold",Helvetica,Arial;
+					font-family: _font(family);
 					border: 0;
 					color: inherit;
 					display: block;
 
 					letter-spacing: 0.15em;
-					font-size: 0.70rem;
+					font-size: 0.75rem;
 					outline: 0;
 					text-decoration: none;
 					white-space: nowrap;
@@ -1672,8 +1687,8 @@
 
 	#header {
 		@include vendor('transition', 'background-color #{_duration(transitions)} ease');
-		background: _palette(fg);
-		// background: transparent;
+		// background: _palette(fg);
+		background: transparent;
 		height: 3em;
 		left: 0;
 		line-height: 3em;
@@ -1839,9 +1854,9 @@
 			z-index: 1;
 			letter-spacing: 0.5em;
 			text-align: center;
-			border-top: solid 6px;
+			// border-top: solid 6px;
 			color: #f9f9f8;
-			border-bottom: solid 6px;
+			// border-bottom: solid 6px;
 
 			.x {
 				color: transparent;
@@ -2287,7 +2302,7 @@
 				position: absolute;
 				width: 100%;
 				z-index: 999;
-				background-color: rgba(33,31,30,0.8);
+				background-color: rgba(13,13,13,0.95);
 				height: 100%;
 			}
 		}
