added centering margin to header tag

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1868,6 +1868,7 @@
 			text-align: center;
 			// border-top: solid 6px;
 			color: #f9f9f8;
+			margin-left: 0.5em;
 			// border-bottom: solid 6px;
 
 			.x {
