--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -46,6 +46,8 @@ $font: (
 
 // Palette.
 $palette: (
+	new_bg:             #1A1A1A,
+	new_fg:             #5E5E5E,
 	bg:					#212121,
 	fg:					#fff,
 	fg-bold:			#fff,
