--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1202,7 +1202,8 @@
 			}
 
 			.content {
-				@include padding(4em, 3em);
+				// @include padding(4em, 3em);
+			    margin: 15em 0em -4em 0em;
 				max-width: none;
 				text-align: center;
 				width: 100%;
@@ -2080,7 +2081,7 @@
 	#main {
 		> header {
 			@include padding(12em, 0);
-			@include vendor('background-image', ('linear-gradient(top, rgba(235,221,214,.7), rgba(235,221,214,.7))', 'url("../images/57060028-2.jpg")'));
+			@include vendor('background-image', ('linear-gradient(top, rgba(235,221,214,.7), rgba(235,221,214,.7))', 'url("../images/banner-yea.jpg")'));
 			background-attachment: fixed;
 			background-position: center center;
 			background-repeat: no-repeat;
@@ -2263,7 +2264,7 @@
 
 	body.landing {
 		#page-wrapper {
-			@include vendor('background-image', ('linear-gradient(top, rgba(235,221,214,.7), rgba(235,221,214,.7))', 'url("../images/57060028-2.jpg")'));
+			@include vendor('background-image', ('linear-gradient(top, rgba(235,221,214,.7), rgba(235,221,214,.7))', 'url("../images/banner-yea.jpg")'));
 			background-attachment: fixed;
 			background-position: center center;
 			background-repeat: no-repeat;
@@ -2284,7 +2285,7 @@
 
 			#banner,
 			.wrapper.style4 {
-				@include vendor('background-image', ('linear-gradient(top, rgba(235,221,214,.7), rgba(235,221,214,.7))', 'url("../images/57060028-2.jpg")'));
+				@include vendor('background-image', ('linear-gradient(top, rgba(235,221,214,.7), rgba(235,221,214,.7))', 'url("../images/banner-yea.jpg")'));
 				background-position: center center;
 				background-repeat: no-repeat;
 				background-size: cover;
