--- a/css/brightcove.css
+++ b/css/brightcove.css
@@ -1,4 +1,6 @@
 .vjs-poster {
+    background: transparent !important;
+    background-color: transparent !important;
     background-image: inherit !important;
 }
 .video-js {
