--- a/css/brightcove.css
+++ b/css/brightcove.css
@@ -1,7 +1,7 @@
 .vjs-poster {
     background: transparent !important;
     background-color: transparent !important;
-    background-image: inherit !important;
+    /* background-image: inherit !important; */
 }
 .video-js {
     background-color: transparent !important;
