--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1162,7 +1162,7 @@
 			background-size: cover;
 		} 
 		&.style-scholastic {
-			background: url('../scholastic/images/DSC01351.jpg');
+			background: url('../scholastic/images/wall.JPG');
 			background-size: cover;
 		}
 		&.style-meet-eat {
