--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2111,7 +2111,7 @@
 
 		> header {
 			@include padding(12em, 0);
-			@include vendor('background-image', ('linear-gradient(top, rgba(235,221,214,.7), rgba(235,221,214,.7))', 'url("../images/banner-yea.jpg")'));
+			@include vendor('background-image', ('linear-gradient(top, rgba(235,221,214,.1), rgba(235,221,214,.7))', 'url("../images/38320027.jpg")'));
 			background-attachment: fixed;
 			background-position: bottom center;
 			background-repeat: no-repeat;
@@ -2300,7 +2300,7 @@
 
 	body.landing {
 		#page-wrapper {
-			@include vendor('background-image', ('linear-gradient(top, rgba(235,221,214,.7), rgba(235,221,214,.7))', 'url("../images/banner-yea.jpg")'));
+			@include vendor('background-image', ('linear-gradient(top, rgba(235,221,214,.1), rgba(235,221,214,.7))', 'url("../images/38320027.jpg")'));
 			background-attachment: fixed;
 			background-position: bottom center;
 			background-repeat: no-repeat;
@@ -2323,7 +2323,7 @@
 
 			#banner,
 			.wrapper.style4 {
-				@include vendor('background-image', ('linear-gradient(top, rgba(235,221,214,.7), rgba(235,221,214,.7))', 'url("../images/banner-yea.jpg")'));
+				@include vendor('background-image', ('linear-gradient(top, rgba(235,221,214,.1), rgba(235,221,214,.7))', 'url("../images/38320027.jpg")'));
 				background-position: bottom center;
 				background-repeat: no-repeat;
 				background-size: cover;
