--- a/css/brightcove.css
+++ b/css/brightcove.css
@@ -3,6 +3,9 @@
     background-color: transparent !important;
     /* background-image: inherit !important; */
 }
+.vjs-poster {
+    outline: none;
+}
 .video-js {
     background-color: transparent !important;
 }
@@ -56,7 +59,7 @@ button.vjs-fullscreen-control.vjs-control.vjs-button {
     transform: translateY(0em);
 }
 
-.vjs-has-started.not-hover .vjs-dock-shelf, .vjs-has-started.not-hover .vjs-dock-text {
+.vjs-has-started.not-hover .vjs-dock-shelf, .vjs-has-started.not-hover .vjs-dock-text, .vjs-playing.vjs-user-inactive .vjs-dock-text {
     opacity: 1 !important;
 }
 
@@ -99,3 +102,4 @@ button.vjs-fullscreen-control.vjs-control.vjs-button {
 .vjs-time-tooltip {
     display: none !important;
 }
+
