--- a/css/brightcove.css
+++ b/css/brightcove.css
@@ -25,11 +25,15 @@ video {
 }
 
 .video-js .vjs-dock-text {
-    background: transparent !important;
+    /* background: transparent !important; */
+    padding: 10px 25px 24px 35px !important;
+    background: rgba(0,0,0,.4) !important;
+    background: -webkit-linear-gradient(to bottom,rgba(0,0,0,.8),rgba(0,0,0,.4)) !important;
+    background: linear-gradient(to bottom,rgba(0,0,0,.8),rgba(0,0,0,.4)) !important;
 }
 
 .video-js .vjs-dock-description, .video-js .vjs-dock-title {
-    color: #333031 !important;
+    color: #FFF !important;
     font-family: "Helvetica Neue", Helvetica, sans-serif;
 }
 
@@ -39,7 +43,7 @@ video {
 }
 
 .video-js .vjs-dock-description {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
 }
 
