--- a/css/brightcove.css
+++ b/css/brightcove.css
@@ -2,7 +2,7 @@
     /* background: transparent !important; */
     background-color: transparent !important;
     background-size: cover;
-    background-position: top;
+    background-position: center;
     /* background-image: inherit !important; */
 }
 .vjs-poster {
