--- a/css/brightcove.css
+++ b/css/brightcove.css
@@ -122,3 +122,9 @@ button.vjs-fullscreen-control.vjs-control.vjs-button {
     display: none !important;
 }
 
+@media only screen and (min-resolution: 117dpi) and (max-resolution: 119dpi), only screen and (min-resolution: 131dpi) and (max-resolution: 133dpi), only screen and (min-resolution: 145dpi) and (max-resolution: 154dpi), only screen and (min-resolution: 162dpi) and (max-resolution: 164dpi), only screen and (min-resolution: 169dpi) {
+    video {
+        display: block !important;
+    }
+}
+
