--- a/sass/style.scss
+++ b/sass/style.scss
@@ -376,16 +376,9 @@
 				font-family: _font(family);
 				// background: #C3CCA9;
 				display: inline-block;
-				padding: 1em .01em;
+				padding: 0 .01em;
 				position: relative;
 
-				&:after {
-					content: '';
-					display: block;
-					width: 5rem;
-					margin: 1em auto 0;
-					border-bottom: solid 1px #dededc;
-				}
 				@include breakpoint(small) {
 					font-size: 1.15em;
 				}
@@ -394,6 +387,15 @@
 			p {
 				color: _palette(fg);
 				top: 0;
+
+				&:after {
+					content: '';
+					display: block;
+					width: 5rem;
+					margin: 5em auto 0;
+					border-bottom: solid 1px #dededc;
+					@include vendor('transform', 'rotate(90deg)');
+				}	
 			}
 
 			@include breakpoint(small) {
@@ -1103,8 +1105,8 @@
 	.spotlight {
 		@include vendor('align-items', 'center');
 		@include vendor('display', 'flex');
-		margin: 0 0 (_size(element-margin) * 5) 0;
-		padding: 4em 0;
+		margin: 0 0 (_size(element-margin) * 3) 0;
+		padding: 6em 0;
 
 		.image {
 			@include vendor('order', '1');
@@ -1132,7 +1134,7 @@
 
 		.content {
 			@include padding(3em, 4em);
-			margin: 7em 2em -7em 2em;
+			margin: 0 6em;
 			@include vendor('order', '2');
 			max-width: 48em;
 			width: 40%;
@@ -1532,13 +1534,12 @@
 	}
 
 	#menu {
-		@include vendor('transform', 'translateX(-20em)');
-		@include vendor('transition', 'transform #{_duration(menu)} ease');
+		@include vendor('transform', 'translateX(-100em)');
+		@include vendor('transition', ('width #{_duration(menu)} #{_misc(easing)}', 'height #{_duration(menu)} #{_misc(easing)}'));
 		-webkit-overflow-scrolling: touch;
-		background: _palette(fg);
+		background: rgba(_palette(fg), 0.9);
 		color: _palette(new_fg);
-		height: 100%;
-		max-width: 80%;
+		max-width: 100%;
 		overflow-y: auto;
 		padding: 3rem;
 		overflow-x: hidden;
@@ -1548,20 +1549,35 @@
 		// box-shadow: 0px 3px 25px 15px rgba(0,0,0,0.05);
 		left: 0;
 		top: 0;
-		width: 20em;
+		width: 0;
+		height: 0;
+		border-radius: 1000px;
 		// text-align: center;
 		// padding: 3em;
 		z-index: _misc(z-index-base) + 2;
 		display: flex;
+		// @include vendor('justify-content', 'space-around');
+		
+		// .content {
+		// 	display: flex;
+		// 	> h1 {
+		// 		font-size: 1.575rem;
+		// 	}
+		// 	> p {
+		// 		font-size: 1.575rem;
+		// 	}
+		// }
 
 		ul {
-			margin: auto 0;
+			margin: 0 auto;
 			list-style: none;
 			padding: 0;
 
 			> li {
-				margin: 1em 0 0 0;
-				padding: 1em 0 0 0;
+				@include vendor('transition', 'opacity #{_misc(easing)}');
+				margin: 3em 0 0 0;
+				opacity: 0;
+				// padding: 1em 0 0 0;
 
 
 				> a {
@@ -1572,33 +1588,34 @@
 					color: inherit;
 					display: block;
 
-					letter-spacing: 0.15em;
-					font-size: 0.875rem;
+					letter-spacing: -0.015em;
+					font-size: 1.575rem;
 					outline: 0;
 					text-decoration: none;
 					white-space: nowrap;
-					text-transform: uppercase;
+					opacity: 0.8;
+					color: _palette(bg);
+					// text-transform: uppercase;
 
 
 					@include breakpoint(small) {
 						// line-height: 3em;
 					}
 
-					@media
-					only screen and (-webkit-min-device-pixel-ratio: 2),
-					only screen and (   min--moz-device-pixel-ratio: 2),
-					only screen and (     -o-min-device-pixel-ratio: 2/1),
-					only screen and (        min-device-pixel-ratio: 2),
-					only screen and (                min-resolution: 192dpi),
-					only screen and (                min-resolution: 2dppx) { 
+					// @media
+					// only screen and (-webkit-min-device-pixel-ratio: 2),
+					// only screen and (   min--moz-device-pixel-ratio: 2),
+					// only screen and (     -o-min-device-pixel-ratio: 2/1),
+					// only screen and (        min-device-pixel-ratio: 2),
+					// only screen and (                min-resolution: 192dpi),
+					// only screen and (                min-resolution: 2dppx) { 
 
-						/* Retina-specific stuff here */
-						letter-spacing: 0.075em;
-					}
+					// 	/* Retina-specific stuff here */
+					// 	letter-spacing: 0.075em;
+					// }
 
 					&:hover {
-						color: #F53F23;
-						color: _palette(bg);
+						opacity: 1;
 						// text-decoration: underline;
 						// background-color: rgba(254, 255, 163, 0.5);
 						// @include vendor('transform', 'translateX(1em)');
@@ -1672,8 +1689,8 @@
 			display: block;
 			height: 1.7rem;
 			position: absolute;
-			right: 10px;
-			top: calc(50vh - 3em);
+			left: 3em;
+			top: calc(3em - 15px);
 			vertical-align: top;
 			width: 2.5em;
 
@@ -1700,6 +1717,8 @@
 	}
 
 	body.is-menu-visible {
+		overflow-y: hidden;
+
 		#page-wrapper {
 			// color: _palette(bg);
 			opacity: 0.55;
@@ -1712,8 +1731,22 @@
 		}
 
 		#menu {
+			// @include vendor('transition', 'all #{_duration(menu)} #{_misc(easing)}');
 			@include vendor('transform', 'translateX(0)');
-			box-shadow: 0px 3px 25px 15px rgba(0,0,0,0.05);
+			width: 100em;
+			height: 100%;
+			border-radius: 0;
+			// box-shadow: 0px 3px 25px 15px rgba(0,0,0,0.05);
+			@for $i from 1 through _misc(max-wraps) {
+				ul {
+					> li {
+						&:nth-child(#{$i}) {
+							@include vendor('transition-delay', '#{_duration(transitions) + $i * 0.05}');
+							opacity: 1;
+						}
+					}
+				}
+			}
 		}
 	}
 
@@ -1775,7 +1808,7 @@
 			left: 0;
 			width: 6em;
 			top: 0;
-			box-shadow: 0 0 50px 1px rgba(0,0,0,0.2);
+			// box-shadow: 0 0 50px 1px rgba(0,0,0,0.2);
 
 			> ul {
 				list-style: none;
